# Chessbot

./: BUILD_INSTRUCTIONS.md  CMakeLists.txt  ELO.md  README.md
include/core/: bitboard.h  board.h  move.h  move_generator.h  position.h  types.h  zobrist.h
include/evaluation/: dynamic_eval.h  evaluation.h  material.h  nnue.h  nnue_adapter.h  pawn_structure.h  positional.h
include/search/: move_ordering.h  search.h  thread.h  transposition_table.h
include/uci/: uci_interface.h
src/: main.cpp
src/core/: bitboard.cpp  board.cpp  magic.cpp  move.cpp  move_generator.cpp  position.cpp  types.cpp  zobrist.cpp
src/evaluation/: dynamic_eval.cpp  evaluation.cpp  material.cpp  nnue.cpp  nnue_adapter.cpp  pawn_structure.cpp  positional.cpp
src/search/: mcts.cpp  move_ordering.cpp  multithreading.cpp  search.cpp  thread.cpp  transposition_table.cpp
src/uci/: command_parser.cpp  uci_interface.cpp
